--- a/src/assets/i18n/app-signup/en.json
+++ b/src/assets/i18n/app-signup/en.json
@@ -2,7 +2,9 @@
     "SIGNUP": "Sign Up",
     "PROFILE_PICTURE" : "Profile Picture",
      "BUSINESS_PHONE_NUMBER" : "Business phone number",
-     "BUSINESS_EMAIL" : "Business email"
+     "BUSINESS_EMAIL" : "Business email",
+     "BANK" : "Bank",
+     "MFS" : "Mobile financial service"
 
 
 }
