--- a/src/assets/i18n/app-signup/be.json
+++ b/src/assets/i18n/app-signup/be.json
@@ -4,5 +4,8 @@
     "BUSINESS_PHONE_NUMBER" : "ব্যবসায়িক ফোন নম্বর",
     "BUSINESS_EMAIL" : "ব্যবসায়িক ইমেল",
     "BANK" : "ব্যাংক",
-     "MFS" : "মোবাইল আর্থিক পরিষেবা"
+    "MFS" : "মোবাইল আর্থিক পরিষেবা",
+    "PASSWORD_NOT_MATCHED" : "পাসওয়ার্ড মিলছে না।",
+    "PASSWORD_CONSTRAINTS_FAILED" : "একটি বৈধ পাসওয়ার্ড দিন।",
+    "PASSWORD_CONSTRAINTS" : "***পাসওয়ার্ড অন্তত ৮ অক্ষরের হতে হবে, যেখানে অন্তত একটি বড়ো হাতের অক্ষর, একটি ছোট হাতের অক্ষর, একটা সংখ্যা এবং একটি বিশেষ অক্ষর (#?!@$%^&*-) থাকতে হবে***"
 }
