--- a/src/assets/i18n/common/be.json
+++ b/src/assets/i18n/common/be.json
@@ -1,5 +1,5 @@
 {
     "ENGLISH" : "English",
     "BENGALI": "বাংলা",
-    "THIS_FIELD_REQUIRED": "অবশ্যই পূরনীয়"
+    "THIS_FIELD_REQUIRED": "অবশ্যই পূরনীয়।"
 }
