--- a/src/assets/i18n/common/en.json
+++ b/src/assets/i18n/common/en.json
@@ -1,5 +1,5 @@
 {
     "ENGLISH" : "English",
     "BENGALI": "বাংলা",
-    "THIS_FIELD_REQUIRED" : "This field is required"
+    "THIS_FIELD_REQUIRED" : "This field is required."
 }
